--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/styled-components": "^5.1.34",
     "govuk-frontend": "^5.6.0",
     "govuk-react": "^0.10.7",
+    "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.79.4"
   }
 }
